# Isaac_Sim_Folder

./: .gitignore  PACKAGE-INFO.yaml  VERSION  compile_commands.json  isaac-sim.docker.gui.sh  isaac-sim.docker.sh  isaac-sim.fabric.sh  isaac-sim.headless.native.sh  isaac-sim.headless.webrtc.sh  isaac-sim.headless.websocket.h264.sh  isaac-sim.headless.websocket.sh  isaac-sim.selector.sh  isaac-sim.sh  jupyter_notebook.sh  launcher.toml  omni.isaac.sim.post.install.sh  omni.isaac.sim.warmup.sh  requirements.txt  run_all_tests.sh  setup_conda_env.sh
apps/: omni.app.uidoc.kit  omni.isaac.sim.base.kit  omni.isaac.sim.fabric.kit  omni.isaac.sim.headless.native.kit  omni.isaac.sim.headless.webrtc.kit  omni.isaac.sim.headless.websocket.kit  omni.isaac.sim.kit  omni.isaac.sim.python.gym.headless.kit  omni.isaac.sim.python.gym.headless.render.kit  omni.isaac.sim.python.kit  omni.isaac.sim.selector.kit  omni.isaac.sim.test_ext.kit
exts/omni.isaac.ros_bridge/noetic/share/cortex_control/: package.xml
exts/omni.isaac.ros_bridge/noetic/share/cortex_control/cmake/: cortex_control-msg-extras.cmake  cortex_control-msg-paths.cmake  cortex_controlConfig.cmake
icon/: install_icon.py
standalone_examples/: microfactory.py
tests/: tests-jupyter-ogn.sh  tests-jupyter-startup.sh  tests-jupyter-syntheticdata.sh  tests-nativepython-import_sys.sh  tests-nativepython-omni.isaac.cloner.clone_ants.sh  tests-nativepython-omni.isaac.core.add_cubes.sh  tests-nativepython-omni.isaac.core.add_frankas.sh  tests-nativepython-omni.isaac.core.control_robot.sh  tests-nativepython-pip_list.sh  (+114 more)
(+3240 files in other folders)
